--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,15 +4,15 @@ version: 1.0.2
 homepage: https://github.com/mmolaei7878/marker_icon
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
-
+  sdk: ">=3.1.0 <4.0.0"
+  flutter: ">=3.13.2"
+  
 dependencies:
   flutter:
     sdk: flutter
-  flutter_cache_manager: ^3.1.2
-  google_maps_flutter: ^2.2.3
-  flutter_svg: ^2.0.0+1
+  flutter_cache_manager: ^3.3.1
+  google_maps_flutter: ^2.5.0
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
