--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: custom_marker
+name: marker_icon
 description: A package to convert Widget, Local image, Netwok image, Svg file to BitmapDescriptor which can be used in google_maps_flutter icon marker.
 version: 1.0.2
-homepage: https://github.com/mmolaei7878/marker_icon
+homepage: https://github.com/stwellman/marker_icon
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
